log
Thu, May  1, 2025  6:26:20 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
5729e4d
Thu, May  1, 2025  6:26:50 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
082a5b9
Thu, May  1, 2025  6:41:34 PM: 
 treemap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
7f9c4af
Thu, May  1, 2025  7:13:56 PM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
a2704f9
Thu, May  1, 2025  7:16:58 PM: 
 treemap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
80a6ca1
Thu, May  1, 2025  7:19:37 PM: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
dc72146
Thu, May  1, 2025  7:26:38 PM: 
 treemap.c | 113 +++++++++++++++++++++++++++++++++++++++++++++++++++++---------
 1 file changed, 98 insertions(+), 15 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'eraseTreeMap':
treemap.c:107:5: error: implicit declaration of function 'removeNode'; did you mean 'remove'? [-Werror=implicit-function-declaration]
     removeNode(tree, node);
     ^~~~~~~~~~
     remove
In file included from test.c:4:
treemap.c: At top level:
treemap.c:111:6: error: conflicting types for 'removeNode' [-Werror]
 void removeNode(TreeMap * tree, TreeNode* node) {
      ^~~~~~~~~~
In file included from test.c:4:
treemap.c:107:5: note: previous implicit declaration of 'removeNode' was here
     removeNode(tree, node);
     ^~~~~~~~~~
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
60f2456
Thu, May  1, 2025  7:27:49 PM: 
 treemap.c | 113 +++++++++-----------------------------------------------------
 1 file changed, 15 insertions(+), 98 deletions(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
4c12412
Thu, May  1, 2025  7:29:26 PM: 
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
a631062
Thu, May  1, 2025  8:06:47 PM: 
 treemap.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
Compilation failed
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
2be4b1d
Thu, May  1, 2025  8:33:02 PM: 
 treemap.c | 76 ++++++++++++++++++++++++++++++++++++++++++++++++++++-----------
 1 file changed, 63 insertions(+), 13 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function 'eraseTreeMap':
treemap.c:107:5: error: implicit declaration of function 'removeNode'; did you mean 'remove'? [-Werror=implicit-function-declaration]
     removeNode(tree, node);
     ^~~~~~~~~~
     remove
treemap.c: At top level:
treemap.c:110:6: error: conflicting types for 'removeNode' [-Werror]
 void removeNode(TreeMap * tree, TreeNode* node) {
      ^~~~~~~~~~
treemap.c:107:5: note: previous implicit declaration of 'removeNode' was here
     removeNode(tree, node);
     ^~~~~~~~~~
test.c:6:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
f16d912
